# cars-reliability

./: .gitignore  CLAUDE.md  README.md  pr.py  pr_body.md  pr_body.txt  pr_description.txt  requirements.txt  tmp_chunk.txt
.Jules/: bolt.md  palette.md
.githooks/: commit-msg  pre-commit  pre-push
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: checks.yml  ci.yml  data_download.yml  data_export_experiment.yml  data_process.yml  deploy_web.yml  download.yml  (+8 more)
.jules/: bolt.md  sentinel.md
ci/: attribution-check.sh  charset-check.sh  commit-attribution-check.sh  loc-check.sh
data/: .gitkeep
docs/: ai-rules.md  api-limits.md  architecture.md  data-sources.md  data_mapping.md  development.md  future.md  index.html  index.md  metrics.md  requirements.md  todo.md
scripts/: api_client.py  bench_defect_build.py  cache_validate.py  config.py  data_download.py  data_download_bulk.py  data_duckdb_export.py  data_export.py  data_process.py  debug_body_types.py  debug_price_fuel.py  debug_vehicle_types.py  defect_aggregate.py  defect_build.py  defect_categories.py  fuel_build.py  inspection_prepare.py  inspection_stats.py  pyproject.toml  rdw_api.py  stats_aggregate.py  stats_calculate.py  system_utils.py  validate_json_schema.py
scripts/tests/: test_data_download.py
site/: index.html
src/: download.py  fetch_data.py  fetch_dataset.py  fetch_pipeline.py  fetch_single.py  generate_site.py  process_data.py  rdw_client.py  test_streaming_csv.py
web/: .gitignore  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  vitest.config.ts
(+87 files in other folders)
