[project]
name = "cars-reliability"
version = "1.0.0"
description = "Dutch car reliability analysis using RDW Open Data"
requires-python = ">=3.11"
license = {text = "CC0-1.0"}

dependencies = [
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP"]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
]
