[project]
name = "cars-reliability"
version = "1.0.0"
description = "APK inspection defect statistics analysis using RDW Open Data"
requires-python = ">=3.11"
license = {text = "CC0-1.0"}

dependencies = [
    "requests>=2.34.2",
    "polars>=1.41.0",
    "psutil>=7.2.2",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.15.14",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP"]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.0.3",
]
